[package]
name = "bitcoin_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4"
bitcoin = { version = "0.32.2", features = ["rand"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"